// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SavedSearchTable/> component rendering matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <load
    allowsSelection={false}
    canCreateTraits={undefined}
    isAdvancedSearchEnabled={false}
    isLoaded={false}
    results={Object {}}
    totalKeyValuePairs={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SavedSearchTable/> component state changes based on lifecyle events with error matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <load
    allowsSelection={false}
    canCreateTraits={undefined}
    isAdvancedSearchEnabled={false}
    isLoaded={false}
    results={Object {}}
    totalKeyValuePairs={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<SavedSearchTable/> component state changes based on lifecyle events without error matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <load
    allowsSelection={false}
    canCreateTraits={undefined}
    isAdvancedSearchEnabled={false}
    isLoaded={true}
    results={
      Object {
        "includedInTraits": Array [
          1,
          2,
          3,
        ],
        "keyValuePairs": Array [
          Object {
            "key": "k-regional",
            "operator": "<",
            "value": 57091,
          },
        ],
        "percentageChange": 0.154,
        "signalStatus": "USED",
        "source": Object {
          "dataSourceIds": 93561,
          "reportSuiteIds": null,
          "sourceType": "REALTIME",
        },
        "totalCount": 21456,
      }
    }
    totalKeyValuePairs={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "allowsSelection": false,
      "canCreateTraits": undefined,
      "isAdvancedSearchEnabled": false,
      "results": Object {
        "includedInTraits": Array [
          1,
          2,
          3,
        ],
        "keyValuePairs": Array [
          Object {
            "key": "k-regional",
            "operator": "<",
            "value": 57091,
          },
        ],
        "percentageChange": 0.154,
        "signalStatus": "USED",
        "source": Object {
          "dataSourceIds": 93561,
          "reportSuiteIds": null,
          "sourceType": "REALTIME",
        },
        "totalCount": 21456,
      },
      "totalKeyValuePairs": 1,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "allowsSelection": false,
        "canCreateTraits": undefined,
        "isAdvancedSearchEnabled": false,
        "results": Object {
          "includedInTraits": Array [
            1,
            2,
            3,
          ],
          "keyValuePairs": Array [
            Object {
              "key": "k-regional",
              "operator": "<",
              "value": 57091,
            },
          ],
          "percentageChange": 0.154,
          "signalStatus": "USED",
          "source": Object {
            "dataSourceIds": 93561,
            "reportSuiteIds": null,
            "sourceType": "REALTIME",
          },
          "totalCount": 21456,
        },
        "totalKeyValuePairs": 1,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
